# CMD-Media-Player

./: .gitignore  CMakeLists.txt  README.md  linux_install.sh
.github/workflows/: release.yml  update-brew.yml
CMD-Media-Player/: basic-functions.cpp  basic-functions.hpp  main.cpp  video-player.cpp
CMD-Video-Player/: basic-functions.cpp
include/cmd-media-player/: basic-functions.hpp  media-player.hpp  player-basic.hpp  player-core.hpp  render-basic.hpp  video-player.hpp
src/: basic-functions.cpp  main.cpp  media-player.cpp  player-basic.cpp  player-core.cpp  video-player.cpp
